# netting

./: Cargo.toml  Dockerfile  README.md  deploy.yaml  svc.yaml
init/: Dockerfile
src/: catalog.rs  catalogue.rs  main.rs
src/comm/: server.rs
src/k8s/: deploy.rs  inject.rs  mod.rs  namespace.rs  pod.rs  svc.rs  types.rs
src/net/: server.rs
src/proto/: msg.proto  msg.rs
src/protos/: mod.rs
