[package]
name = "netting"
version = "0.1.0"
authors = ["Daniel McCrevan <danielmccrevan@gmail.com>"]
edition = "2018"

[dependencies]
protobuf = "2"
kube = "0.33.0"
kube-derive = "0.33.0"
k8s-openapi = { version = "0.7.1", default-features = false, features = ["v1_15"] }
tokio = { version = "0.2", features = ["full"] }

[build-dependencies]
protoc-rust = "2.0"

